# CitySprawl

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: MVP.md  benchmark_workflow_mvp_design.md  city_quality_manual_acceptance.md  cross_block_spine_street_run_design.md  local_roads_long_trace_connector_design.md  major_roads_generation_scheme.md  road gen.md  road plan.md  road_generation_current_algorithm.md
engine/: __init__.py  generator.py  models.py  pydantic_compat.py
engine/analysis/: __init__.py  population.py  resources.py  suitability.py
engine/api/: app.py
engine/blocks/: __init__.py  classification.py  extraction.py  parcelize.py
engine/core/: __init__.py  geometry.py  spatial.py
engine/export/: __init__.py  json_export.py
engine/hubs/: __init__.py  sampling.py
engine/logs/: major_local_trace_20260227_200817_seed42.json
engine/naming/: __init__.py  providers.py  service.py
engine/observability/: __init__.py  logging.py  runlog.py
engine/roads/: __init__.py  _nx_compat.py  classic_growth.py  classic_local_fill.py  intersections.py  local_reroute.py  network.py  pedestrian.py  street_run.py  syntax.py  tensor_field.py  terrain_probe.py
engine/staging/: __init__.py  builder.py  models.py  narration.py
engine/terrain/: __init__.py  classification.py  contours.py  generator.py  hydrology.py  river_area.py
engine/tests/: test_analysis.py  test_api.py  test_block_extraction_topology.py  test_blocks.py  (+29 more)
examples/: default_config.json
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+30 files in other folders)
