[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citygen-urban-sandbox"
version = "0.1.0"
description = "GeoAI Urban Sandbox MVP procedural generation engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "numpy>=1.24",
  "networkx>=3.2",
  "pydantic>=2.5",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
